[project]
name = "hvym-pinner"
version = "0.1.0"
description = "Autonomous IPFS pinning daemon for the Heavymeta/Pintheon ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stellar-sdk[aiohttp]>=13.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tomli>=2.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4.0",
]

[project.scripts]
hvym-pinner = "hvym_pinner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hvym_pinner"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--html=reports/test-report.html --self-contained-html -v"
markers = [
    "kubo: requires local Kubo daemon at localhost:5001",
    "tier1: mock-only fast tests (default)",
    "testnet: real Stellar testnet stress tests (Tier 3)",
    "e2e: end-to-end tests requiring both Kubo and Stellar testnet (Tier 4)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-html>=4.1.0",
    "ruff>=0.15.0",
]
